Native/Test/KL/CORE-130.out
CORE-130.kl:13:3: error: no definition found for function myFunction(Integer, io Integer)
CORE-130.kl:14:3: error: no definition found for function myFunction(Integer, Integer, Integer, io Integer)
